# nasa-space-apps

./: .gitignore  README.md  demo.py  features.db  main.py  pyproject.toml  run.bat  run.sh
backend/: db.py  main.py  pyproject.toml
backend/core/: config.py  loader.py
backend/datasets/: base_dataset.py  manifest.json
backend/models/: base_dataset.py  base_feature.py  manifest.json  schemas.py
backend/routes/: datasets.py  features.py  tiles.py
backend/tests/: conftest.py  test_datasets.py  test_tiles.py
cache/: cache.db
core/: loader.py  utils.py
datasets/: base_dataset.py  gibs_adapter.py  manifest.json
frontend/: index.html  package-lock.json  package.json
frontend/css/: styles.css
frontend/js/: annotations.js  app.js  datasets.js
routes/: datasets.py  labels.py  tiles.py
tests/: tests.md
