[project]
name = "nasa-space-apps"
version = "0.1.0"
description = ""
authors = [
    {name = "mchaney-dev"},
    {name = "edenasharpie"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "diskcache (>=5.6.3,<6.0.0)"
]
packages = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
black = "^25.9.0"
isort = "^6.1.0"
mypy = "^1.18.2"

